# trading-pipeline

./: CMakeLists.txt  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: cpp-build-and-test.yml  cpp-linter.yml  cpp-tests.yml  python-integration-test.yml  python-lint.yml  python-linter.yml  python-test.yml  python-tests.yml
src/cppsrc/: main.cpp
src/cppsrc/features/: BaseFeature.hpp  FiveTickVolumeFeature.hpp  NTradesFeature.hpp  PercentBuyFeature.hpp  PercentSellFeature.hpp
src/cppsrc/test/: test_feature_n_trades.cpp  test_feature_pct_buy_trades.cpp  test_feature_pct_sell_trades.cpp  test_feature_sum_5tick_volume.cpp
src/pysrc/: analysis.py  data_client.py  lasso_model.py  lassomodel.py
src/pysrc/test/: test_basic.py  test_pybind.py
src/pysrc/test/integration/: test_integration_data_client.py  test_model_training.py
src/pysrc/test/unit/: test_data_client.py  test_features.py  test_model.py
