[tool.poetry]
name = "intern-project"
version = "0.1.0"
description = "A project for managing Python and C++ dependencies"
authors = ["Harry Guan <guanhuai2014@gmail.com>"]
readme = "README.md"
packages = [
  { include = "pysrc", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
mypy = "^1.12.1"
ruff = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
mypy = "^1.12.1"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
per-file-ignores = [
  { file = "*.py", codes = ["F401"] }  # Ignore unused imports
]

