[tool.poetry]
name = "intern-project"
version = "0.1.0"
description = ""
authors = ["Harry Guan <guanhuai2014@gmail.com>"]
readme = "README.md"
packages = [
  {include = "pysrc", from = "src"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"

[project]
name = "intern-project"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [
  {include = "pysrc", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
mypy = "^1.12.1"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"*.py" = ["F401"]
